// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Badge matches snapshot 1`] = `
<DocumentFragment>
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-cmSFZU-color-primary decaBadge-root"
  />
</DocumentFragment>
`;

exports[`components/Badge renders all colors 1`] = `
<DocumentFragment>
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-cmSFZU-color-primary decaBadge-root"
  />
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-eVPjO-color-secondary decaBadge-root"
  />
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-gkSmNj-color-success decaBadge-root"
  />
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-iuTjpG-color-warning decaBadge-root"
  />
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-biZWLQ-color-error decaBadge-root"
  />
</DocumentFragment>
`;

exports[`components/Badge renders all sizes 1`] = `
<DocumentFragment>
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-ioXeqN-size-sm c-crcrmp-cmSFZU-color-primary decaBadge-root"
  />
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-VfgCA-size-md c-crcrmp-cmSFZU-color-primary decaBadge-root"
  />
  <span
    class="c-crcrmp c-crcrmp-fzQAVN-pill-false c-crcrmp-YKOjF-size-lg c-crcrmp-cmSFZU-color-primary decaBadge-root"
  />
</DocumentFragment>
`;

exports[`components/Badge renders pill option 1`] = `
<DocumentFragment>
  <span
    class="c-crcrmp c-crcrmp-euJLgm-pill-true c-crcrmp-VfgCA-size-md c-crcrmp-cmSFZU-color-primary decaBadge-root"
  />
</DocumentFragment>
`;
